--- a/src/utils/global.css
+++ b/src/utils/global.css
@@ -3,6 +3,8 @@ body {
   --textNormal: #222;
   --textTitle: #222;
   --textLink: #ff6060;
+  --blockQuote: hsla(0, 0%, 0%, 0.59);
+  --blockQuoteBorder: 0.32813rem solid hsla(0, 0%, 0%, 0.9);
   --hr: hsla(0, 0%, 0%, 0.2);
 
   background-color: var(--bg);
@@ -13,6 +15,8 @@ body.dark {
   --bg: #282c35;
   --textNormal: rgba(255, 255, 255, 0.88);
   --textTitle: white;
-  --textLink: #be20ff;
+  --textLink: #b238ff;
+  --blockQuote: hsla(0, 0%, 100%, 0.59);
+  --blockQuoteBorder: 0.32813rem solid hsla(0, 0%, 100%, 0.9);
   --hr: hsla(0, 0%, 100%, 0.2);
 }
